--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,5 +1,12 @@
 build:
   nodes:
+    analysis:
+      environment:
+        php:
+          version: 7.2
+      tests:
+        override:
+          - php-scrutinizer-run
     coverage:
       dependencies:
         before:
@@ -34,3 +41,6 @@ build:
             coverage:
               file: web/tests/_output/coverage.xml
               format: clover
+checks:
+    php:
+        code_rating: true
