--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,9 +8,6 @@ build:
         override:
           - php-scrutinizer-run
     coverage:
-      dependencies:
-        before:
-
       environment:
         php:
           version: 7.2
@@ -24,7 +21,6 @@ build:
               web_root: 'web/'
         selenium: true
       services:
-          # For available tags, see https://hub.docker.com/_/mysql/
           mysql: 5.7
       tests:
         before:
@@ -45,5 +41,6 @@ checks:
     php:
         code_rating: true
 filter:
-    excluded_paths:
-        - web/
+    paths: ["web/vendor/phpmv/ubiquity/Ubiquity/*"]
+    dependency_paths:
+        - web/vendor/
