--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -41,15 +41,12 @@ checks:
     php:
         code_rating: true
 filter:
-    paths: ["web/vendor/phpmv/ubiquity/Ubiquity/*"]
+    paths: ["web/vendor/phpmv/ubiquity/Ubiquity/"]
     excluded_paths:
         - web/vendor/phpmv/ubiquity/Ubiquity/log/
         - web/vendor/phpmv/ubiquity/Ubiquity/controllers/Autoloader.php
         - web/vendor/phpmv/ubiquity/Ubiquity/controllers/admin/
         - web/vendor/phpmv/ubiquity/Ubiquity/annotations/
+        - web/vendor/phpmv/ubiquity/Ubiquity/cache/
         - web/vendor/phpmv/ubiquity/Ubiquity/js/Jquery.php
         - web/vendor/phpmv/ubiquity/Ubiquity/utils/git/UGitRepository.php
-        - web/vendor/phpmv/ubiquity/docs/
-        - web/vendor/phpmv/ubiquity/api/
-        - web/vendor/phpmv/ubiquity/documentation/
-        - web/vendor/phpmv/ubiquity/tests/
