--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,9 @@
 build:
   nodes:
     analysis:
+      dependencies:
+        before:
+          - (cd web/ && composer update)
       environment:
         php:
           version: 7.2
@@ -24,9 +27,7 @@ build:
           mysql: 5.7
       tests:
         before:
-          - (cd web/ && composer update)
-          - cp -R web/vendor/phpmv/ubiquity/Ubiquity/ web/Ubiquity/
-          - (cd web/ && composer remove phpmv/ubiquity && composer update -a)
+          - (cd web/ && composer update -a)
           - sudo cp web/tests/files/xdebug.ini /home/scrutinizer/.phpenv/versions/7.2.13/etc/conf.d/xdebug.ini
           - mysql -u root mysql < web/tests/unit/db/messagerie.sql
           - ./web/vendor/bin/Ubiquity init-cache
@@ -43,11 +44,6 @@ checks:
     php:
         code_rating: true
 filter:
-    paths: ["web/Ubiquity/*"]
-    excluded_paths:
-        - web/Ubiquity/log/
-        - web/Ubiquity/controllers/Autoloader.php
-        - web/Ubiquity/controllers/admin/
-        - web/Ubiquity/annotations/
-        - web/Ubiquity/js/Jquery.php
-        - web/Ubiquity/utils/git/UGitRepository.php
+    paths: ["web/vendor/phpmv/ubiquity/Ubiquity/*"]
+    dependency_paths:
+        - scrutinizer/
