--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -28,7 +28,7 @@ build:
           mysql: 5.7
       tests:
         before:
-          - (cd web/ && composer update -a)
+          - (cd web/ && composer remove phpmv/ubiquity)
           - sudo cp web/tests/files/xdebug.ini /home/scrutinizer/.phpenv/versions/7.2.13/etc/conf.d/xdebug.ini
           - mysql -u root mysql < web/tests/unit/db/messagerie.sql
           - ./web/vendor/bin/Ubiquity init-cache
